Fix spacing between cards

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -14,7 +14,6 @@
   @include tablet {
     font-size: 1.2rem;
     width: 12rem;
-    margin-right: 1.5rem;
     padding: 0;
   }
 
@@ -22,7 +21,6 @@
     font-size: 1.3rem;
     height: 16rem;
     width: 14rem;
-    margin-right: 4rem;
     margin-bottom: 3rem;
   }
 
